fix too small text a11y (#3847)
* event feed text fixes


* apps page text fixes


* more too small text fixes

--- a/components/automate-ui/src/app/page-components/event-feed-table/event-feed-table.component.scss
+++ b/components/automate-ui/src/app/page-components/event-feed-table/event-feed-table.component.scss
@@ -15,14 +15,14 @@
   flex-basis: 100px;
 
   & > .event-time {
-    padding-bottom: 5pt;
-    padding-top: 5pt;
+    padding-bottom: 4pt;
+    padding-top: 4pt;
   }
 
   & > .event-day,
   & > .event-date {
-    font-size: .625em;
-    line-height: 10pt;
+    font-size: 11px;
+    line-height: 16px;
   }
 }
 
@@ -133,14 +133,20 @@ chef-side-panel {
   }
 }
 
-.event-group-text {
-  margin: 0;
-  font-size: 10px;
-
-
+.event-group-text,
+.event-group-list h2.display4 {
   & > strong {
     display: block;
     margin-bottom: 4px;
+  }
+}
+
+.event-group-text {
+  margin: 0;
+  font-size: 11px;
+
+
+  & > strong {
     font-size: 12px;
   }
 
