--- a/components/automate-ui/src/app/pages/service-groups/service-groups.component.scss
+++ b/components/automate-ui/src/app/pages/service-groups/service-groups.component.scss
@@ -360,7 +360,7 @@ chef-radial-chart {
   height: 70px;
 
   .percent {
-    font-size: 10px;
+    font-size: 11px;
     font-weight: bolder;
 
     .value {
